--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,19 @@
 
 -e hg+ssh://hg@bitbucket.org/douglatornell/raspi_x10#egg=raspi_x10-dev
 
+Mako==0.9.1
+MarkupSafe==0.18
+PasteDeploy==1.5.2
+WebOb==1.3.1
 coverage==3.7
 py==1.4.18
+pyramid-mako==0.3.1
+pyramid==1.5a3
 pytest==2.4.2
+repoze.lru==0.6
 tox==1.6.1
+translationstring==1.1
+venusian==1.0a8
 virtualenv==1.10.1
+zope.deprecation==4.1.0
+zope.interface==4.0.5
