Add config file to run web remote app in production deployment.

--- a/production.ini
+++ b/production.ini
@@ -1,18 +1,12 @@
-# Development config for running web_remote app via Pyramid pserve utility
+# Production config for running web_remote app via Pyramid pserve utility
 
 [app:web_remote]
 use = egg:raspi_x10
 
 pyramid.includes = pyramid_mako
+mako.directories = raspi_x10:templates
 
 pyramid.default_locale_name = en
-pyramid.reload_templates = true
-
-pyramid.debug_authorization = false
-pyramid.debug_notfound = false
-pyramid.debug_routematch = false
-
-mako.directories = raspi_x10:templates
 
 
 [pipeline:main]
@@ -29,11 +23,11 @@ port = 6543
 keys = root, web_remote
 
 [handlers]
-keys = console
+keys = rotating
 
-[handler_console]
-class = StreamHandler
-args = (sys.stderr,)
+[handler_rotating]
+class = RotatingFileHandler
+args = ('%(here)s/web_remote.log', 'a', 10000000, 3)
 level = NOTSET
 formatter = generic
 
@@ -45,7 +39,7 @@ format = %(asctime)s %(levelname)-5.5s [%(name)s] "%(message)s"
 
 [logger_root]
 level = INFO
-handlers = console
+handlers = rotating
 
 [logger_web_remote]
 level = DEBUG
